# labpro

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260620_0001_create_users.py  20260620_0002_create_auth_sessions.py  20260620_0003_create_members.py  20260620_0004_create_books.py  20260620_0005_create_loans.py  20260620_0006_create_fines.py  20260620_0007_create_reservations.py  20260621_0008_create_notifications.py
app/: main.py
app/api/: router.py
app/api/routes/: auth.py  books.py  fines.py  health.py  loans.py  members.py  notifications.py  reports.py  reservations.py  users.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/dependencies/: auth.py
app/frontend/: index.html
app/frontend/static/css/: app.css
app/frontend/static/js/: api.js  app.js
app/models/: __init__.py  auth_session.py  book.py  fine.py  loan.py  member.py  notification.py  reservation.py  user.py
app/schemas/: auth.py  book.py  fine.py  loan.py  member.py  notification.py  report.py  reservation.py  user.py
app/scripts/: create_admin.py  seed_demo.py
app/services/: auth.py  books.py  fines.py  loans.py  members.py  notifications.py  reports.py  reservations.py  users.py
tests/: acceptance_ui.mjs  conftest.py  test_auth.py  test_books.py  test_config.py  test_cors.py  test_fines.py  test_frontend.py  test_health.py  test_loans.py  test_members.py  test_notifications.py  test_reports.py  test_reservations.py  test_security.py
