[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "librarian-pro-api"
version = "0.1.0"
description = "Backend API for Librarian Pro"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2.0",
    "email-validator>=2.2,<3.0",
    "fastapi>=0.115,<1.0",
    "pwdlib[argon2]>=0.2,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.7,<3.0",
    "PyJWT>=2.10,<3.0",
    "python-multipart>=0.0.20,<1.0",
    "sqlalchemy>=2.0.36,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
    "ruff>=0.9,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["frontend/*.html", "frontend/static/css/*.css", "frontend/static/js/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
